openshift/kustomize/app/editor/base/deploy.yaml
---
# How the app will be deployed to the pod.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: editor
  namespace: default
  annotations:
    description: Defines how to deploy editor
  labels:
    name: editor-app
    part-of: tno
    version: 1.0.0
    component: editor
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  selector:
    matchLabels:
      name: editor
      part-of: tno
      component: editor
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: editor
      labels:
        name: editor
        part-of: tno
        component: editor
    spec:
      volumes:
        - name: editor-keycloak
          configMap:
            name: editor-sso
            items:
              - key: keycloak.json
                path: keycloak.json
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: editor
          image: bcgov-c4awhwfpcremdbga.azurecr.io/editor:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 100Mi
          volumeMounts:
            - name: editor-keycloak
              mountPath: /usr/share/nginx/html/keycloak.json
              subPath: keycloak.json
          livenessProbe:
            httpGet:
              path: "/nginx-status"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/nginx-status"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
