openshift/kustomize/app/editor/base/deployConfig.yaml
---
# How the app will be deployed to the pod.
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: editor
  namespace: default
  annotations:
    description: Defines how to deploy editor
  labels:
    name: editor-app
    part-of: tno
    version: 1.0.0
    component: editor
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  selector:
    name: editor
    part-of: tno
    component: editor
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      name: editor
      labels:
        name: editor
        part-of: tno
        component: editor
    spec:
      volumes:
        - name: editor-keycloak
          configMap:
            name: editor-sso
            items:
              - key: keycloak.json
                path: keycloak.json
      containers:
        - name: editor
          image: ""
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 100Mi
          volumeMounts:
            - name: editor-keycloak
              mountPath: /usr/share/nginx/html/keycloak.json
              subPath: keycloak.json
          livenessProbe:
            httpGet:
              path: "/nginx-status"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/nginx-status"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - editor
        from:
          kind: ImageStreamTag
          namespace: 9b301c-tools
          name: editor:dev
