openshift/kustomize/app/editor/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: editor
  namespace: default
  annotations:
    description: Route for editor application.
    haproxy.router.openshift.io/balance: source
    haproxy.router.openshift.io/cookie_name: mmi
    haproxy.router.openshift.io/timeout: 2m
  labels:
    name: editor-app
    part-of: tno
    version: 1.0.0
    component: editor
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  host: tno-dev.apps.silver.devops.gov.bc.ca
  path: ""
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    # caCertificate: ""
    # certificate: ""
    # key: ""
  to:
    kind: Service
    name: nginx-editor
    weight: 100
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: editor-tls
  namespace: default
  annotations:
    description: Route for editor application.
    haproxy.router.openshift.io/balance: source
    haproxy.router.openshift.io/cookie_name: mmi
    haproxy.router.openshift.io/timeout: 2m
  labels:
    name: editor-tls
    part-of: tno
    version: 1.0.0
    component: editor
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  host: dev.editor.mmi.gov.bc.ca
  path: ""
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    # caCertificate: ""
    # certificate: ""
    # key: ""
  to:
    kind: Service
    name: nginx-editor
    weight: 100
